<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleImageSearcher</string>
    <string name="action_settings">Settings</string>
    <string name="query_hint">Enter search term</string>
    <string name="search">Search</string>
    <string name="title_activity_advance_search">AdvanceSearchActivity</string>
    <string name="advance_search">Advance Search Options</string>
    <string name="image_size">Image Size</string>
    <string name="image_type">Image Type</string>
    <string name="save">Save</string>
    <string name="site_filter">Site Filter</string>
    <string name="site_hint">Site  to filter</string>
    <string name="title_activity_display_image">DisplayImageActivity</string>
    <string name="search_options">Search Options</string>
    <string name="color_filter">Color Filter</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
